  * Added the 'disassemble' command to CGDB.

  * Add the :logo command to cgdb. This tells CGDB to display a logo
    in the source window.

  * Add an initial Rust syntax highlighter.

  * Support vi type <digit>j and <digit>k motions. Previously only
    typing j or k with out a number was supported.

  * Add support for marks. m[a-z] will set a local file mark and
    m[A-Z] will set a global mark. '[a-z] will jump to the
    corresponding local mark and '[A-Z] will jump to the corresponding
    global mark. As an added bonus '' will jump to the last jump location
    and '. will jump to the last executing line.
    The showmarks option was introduced to show the marks in the source
    window. It defaults to true. You can disable the viewing of marks
    using 'set noshowmarks'.

  * Add support to enable or disable color in the source window.
    The default is enabled. See the documentation for more information.

  * Add support for showing colors in the debug window. If gdb or the
    program being debugged output an ansi escape code representing color,
        https://en.wikipedia.org/wiki/ANSI_escape_code#Colors
    then CGDB will display the corresponding color instead of the escape
    code. This option is configurable with the set debugwincolor option.

  * Add the winminwidth option to CGDB. It controls the minimum width
    that a window can be resized. It corresponds to the winminheight
    option. This was introduced now that CGDB can have vertically split
    windows.

  * Add support for vertical or horizontal splitting of the CGDB/GDB
    windows. Thanks to Daniel Cohen for the original implementation
    of this idea! You can change the window orientation by using the
    command 'set winsplitorientation=horizontal or vertical'.
    horizontal is the default orientation.

  * Remove the TTY mode and TTY window from CGDB. This previously allowed
    you to send input to the program being debugged through the TTY